--- a/index.html
+++ b/index.html
@@ -39,7 +39,18 @@
         <div class="story">
           <div class="story__box">
             <ul class="story__list">
-              <li class="story__item"></li>
+              <li class="story__item">
+                <div class="story__item-profile">
+                  <img src="imgs/myprofile.jpg" alt="" />
+                </div>
+                <span>waiwait0301</span>
+              </li>
+              <li class="story__item">
+                <div class="story__item-profile">
+                  <img src="imgs/myprofile.jpg" alt="" />
+                </div>
+                <span>waiwait0301</span>
+              </li>
             </ul>
           </div>
         </div>
@@ -74,25 +85,34 @@
                 <i class="far fa-sticky-note"></i>
               </div>
             </div>
-            <div class="feed__like-description"></div>
-            <div class="feed__post-description"></div>
+            <div class="feed__like-description">
+              <span>송창엽님 외 300명이 좋아합니다</span>
+            </div>
+            <div class="feed__post-description">
+              <span>waitwait0301 우리 고양님들</span>
+            </div>
             <div class="feed__input">
               <form action="">
                 <input type="text" />
               </form>
+              <div class="uproad">
+                <span>게시</span>
+              </div>
             </div>
           </div>
         </div>
       </div>
 
       <div id="sidebar">
-        <div class="myprofile"></div>
         <div class="recommand">
           <div class="recommand__description">
             <span>회원님을 위한 추천</span>
           </div>
           <ul class="recommand__list">
-            <li class="recommand__item"></li>
+            <li class="recommand__item">
+              <img src="" alt="" />
+              <span></span>
+            </li>
           </ul>
         </div>
       </div>
