JS : json 데이터 Story에 삽입

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
       crossorigin="anonymous"
     />
+    <script src="story.js" defer></script>
   </head>
   <body>
     <header id="header">
@@ -39,12 +40,6 @@
         <div class="story">
           <div class="story__box">
             <ul class="story__list">
-              <li class="story__item">
-                <div class="story__item-profile">
-                  <img src="imgs/myprofile.jpg" alt="" />
-                </div>
-                <span>waiwait0301</span>
-              </li>
               <li class="story__item">
                 <div class="story__item-profile">
                   <img src="imgs/myprofile.jpg" alt="" />
