--- a/index.html
+++ b/index.html
@@ -105,8 +105,18 @@
           </div>
           <ul class="recommand__list">
             <li class="recommand__item">
-              <img src="" alt="" />
-              <span></span>
+              <div class="recommand__left">
+                <div class="recommand__item-img">
+                  <img class="recommand__img" src="imgs/jeju.jpg" alt="" />
+                </div>
+                <div class="recommand__profile">
+                  <div class="recommand__profile-name"><span>jeju</span></div>
+                  <div class="recommand__profile-description">
+                    <span>dagone님이 팔로우합니다</span>
+                  </div>
+                </div>
+              </div>
+              <div class="recommand__right"><span>팔로우</span></div>
             </li>
           </ul>
         </div>
