CSS : 반응형 media query 적용

--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
           <img src="imgs/logo.png" alt="" />
         </div>
         <div class="header__input">
-          <form action=""><input type="text" /></form>
+          <form action="">
+            <input placeholder="검색" type="text" />
+          </form>
         </div>
         <div class="header__icons">
           <div class="icon"><i class="fas fa-home"></i></div>
@@ -35,18 +37,11 @@
       </div>
     </header>
 
-    <section id="main-content">
+    <section class="main-content">
       <div class="left-content">
         <div class="story">
           <div class="story__box">
-            <ul class="story__list">
-              <li class="story__item">
-                <div class="story__item-profile">
-                  <img src="imgs/myprofile.jpg" alt="" />
-                </div>
-                <span>waiwait0301</span>
-              </li>
-            </ul>
+            <ul class="story__list"></ul>
           </div>
         </div>
 
@@ -98,7 +93,7 @@
         </div>
       </div>
 
-      <div id="sidebar">
+      <div class="sidebar">
         <div class="recommand">
           <div class="recommand__description">
             <span>회원님을 위한 추천</span>
@@ -112,7 +107,7 @@
                 <div class="recommand__profile">
                   <div class="recommand__profile-name"><span>jeju</span></div>
                   <div class="recommand__profile-description">
-                    <span>dagone님이 팔로우합니다</span>
+                    <span>dagonge님이 팔로우합니다</span>
                   </div>
                 </div>
               </div>
