JS : json 데이터 Recommand에 삽입

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       crossorigin="anonymous"
     />
     <script src="story.js" defer></script>
+    <script src="recommand.js" defer></script>
   </head>
   <body>
     <header id="header">
@@ -98,22 +99,7 @@
           <div class="recommand__description">
             <span>회원님을 위한 추천</span>
           </div>
-          <ul class="recommand__list">
-            <li class="recommand__item">
-              <div class="recommand__left">
-                <div class="recommand__item-img">
-                  <img class="recommand__img" src="imgs/jeju.jpg" alt="" />
-                </div>
-                <div class="recommand__profile">
-                  <div class="recommand__profile-name"><span>jeju</span></div>
-                  <div class="recommand__profile-description">
-                    <span>dagonge님이 팔로우합니다</span>
-                  </div>
-                </div>
-              </div>
-              <div class="recommand__right"><span>팔로우</span></div>
-            </li>
-          </ul>
+          <ul class="recommand__list"></ul>
         </div>
       </div>
     </section>
