--- a/index.html
+++ b/index.html
@@ -81,23 +81,14 @@
               <span><b>nikeman</b>님 외 300명이 좋아합니다</span>
             </div>
             <div class="feed__post-description">
-              <span><b>waitwait0301</b> 우리 고양님들</span>
+              <span
+                ><b>waitwait0301</b> 우리 고양님들 오늘은 사이좋게 놀고
+                계십니다</span
+              >
+              <br />
+              <span>평소처럼 싸우지 마라 피자 꼬미 ~~</span>
             </div>
-            <ul class="feed__comment-list">
-              <li class="feed__comment-item">
-                <div class="feed__comment-left">
-                  <div class="comment-left__name">
-                    <span>dagonge</span>
-                  </div>
-                  <div class="comment-left__description">
-                    <span>너무 귀엽네요 !!</span>
-                  </div>
-                </div>
-                <div class="feed__comment-heart">
-                  <i class="far fa-heart" style="font-size: 12px"></i>
-                </div>
-              </li>
-            </ul>
+            <ul class="feed__comment-list"></ul>
             <div class="feed__input">
               <!-- <form action=""> -->
               <input
