JS : Header 섹션 User search 기능 구현

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
             ></i>
             <span>검색</span>
           </div>
+          <ul class="header__userinfo invisible"></ul>
         </div>
 
         <div class="header__nav">
