Read more 오류 수정

--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
       integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
       crossorigin="anonymous"
     />
-    <script src="story.js" defer></script>
-    <script src="recommand.js" defer></script>
-    <script src="comment.js" defer></script>
-    <script src="feed-action.js" defer></script>
-    <script src="header-modal.js" defer></script>
-    <script src="header-Input.js" defer></script>
+    <script src="source/story.js" defer></script>
+    <script src="source/recommand.js" defer></script>
+    <script src="source/comment.js" defer></script>
+    <script src="source/feed-action.js" defer></script>
+    <script src="source/header-modal.js" defer></script>
+    <script src="source/header-Input.js" defer></script>
   </head>
   <body>
     <!-- Header -->
