--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <ul class="header__userinfo invisible"></ul>
         </div>
 
-        <div class="header__nav">
+        <nav class="header__nav">
           <div class="icon"><i class="fas fa-home"></i></div>
           <div class="icon"><i class="far fa-paper-plane"></i></div>
           <div class="icon"><i class="far fa-compass"></i></div>
@@ -54,7 +54,7 @@
           <div class="icon myicon">
             <img class="myprofile-img" src="imgs/myprofile.jpg" alt="" />
           </div>
-        </div>
+        </nav>
       </div>
       <div class="header__menu">
         <div class="header__menu-modal invisible">
